--- a/index.html
+++ b/index.html
@@ -1,11 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accueil | atLocal</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <!-- travail de zozo -->
+    <header>
+        <div class="container">
+            <div class="gradient"></div>
+            <img src="./images/PICTURE1.jpg" alt="" class="grad">
+        </div>
+
+        <div class="logo">
+            <img src="./images/atLocal logo.svg" alt="" class="banner">
+        </div>
+
+        <div class="search">
+            <img src="./images/6474f6d08e3b2665beaa3531_search-01.svg" alt="" class="banner">
+        </div>
+
+        <div class="write">
+            <h1 style="font-size: 60px;">SHARING + CELEBRATING <br>ALL THINGS LOCAL</h1>
+        </div>
+
+        <div class="option">
+            <select name="hotels" id="hotels" class="stylesection">
+                <option value="localisation" class="transparent">localisation</option>
+                <option value="repas" class="transparent">repas</option>
+                <option value="jours ouvrable" class="transparent">jours ouvrables</option>
+            </select>
+        </div>
+    </header>
+
+    <!-- travail diane -->
+
+    <section class="trending">
+
+        <h2><span>T</span>RENDING NOW</h2>
+
+        <div class="cards">
+
+            <div class="card">
+                <span class="tag1"><button>CONWAY</button></span>
+                <h3>Exploration Awaits <br />in Conway, AR</h3>
+                <p>Biking, hiking, and every tree in between. Pack up your hiking boots, and get ready for a new
+                    adventure.</p>
+                <button class="more">+Read more</button>
+            </div>
+
+            <div class="card">
+                <span class="tag2"><button>LITTLEROCK</button></span>
+                <h3>Cups of Coffee You <br /> Can't Turn Down</h3>
+                <p>Believe it or not,isn't just for Monday anymore-these coffee shops deserve your Saturday,too.</p>
+                <button class="more">+Read more</button>
+            </div>
+
+            <div class="card">
+                <span class="tag3"><button>FAYETTEVILLE</button></span>
+                <h3>The Best Dishes to <br />Try in Fayetteville</h3>
+                <p>Believe it or not ,coffee isn't just for Monday anymore-these coffee shops deserve your Saturday,too.
+                </p>
+                <button class="more">+Read more</button>
+            </div>
+
+        </div>
+
+        </select>
+
+        <!-- Travaille charles et severin -->
+
+        <div class="produits-contenair">
+            <div class="local">
+                <div class="texte">
+                    <h2 style="font-size: 30px;"><span style="color: #cc1f6a;">C</span>ENTRAL ARKANSAS</h2>
+                </div>
+                <div class="line"></div>
+            </div>
+
+            <div class="produits">
+                <section>
+                    <div class="jus">
+                        <img src="./images/jus.jpg" alt="Drink" class="Drink-img" width="550px">
+                        <h2 class="texte" style="font-size: 30px;">Where to Grab a Drink in Conway</h2>
+                        <p class="paragraphe" style="font-size: 17px; color: #333;">
+                            Biking, hiking, and every tree in between. Put on your <br>
+                            hiking boots, and get ready for a new adventure
+                        </p>
+
+                    </div>
+                </section>
+                <aside>
+                    <div class="foods">
+
+                        <img src="./images/cafe.jpg" alt="image cofé" width="320px">
+
+                        <div class="food-descript">
+                            <h3 style="font-size: 30px;">
+                                Cups of Coffee <br>
+                                You Can't Turn <br>
+                                Down
+                            </h3>
+
+                            <p style="font-size: 17px; color: #333;">Believe in or not, coffee isn't just <br> for
+                                Monday
+                                morninds</p>
+                        </div>
+
+                    </div>
+
+                    <div class="foods">
+
+                        <img src="./images/street-tacos.jpg" alt="tackos" width="320px">
+
+                        <div class="food-descript">
+                            <h3 style="font-size: 30px;">
+                                The Best Dishes to <br>
+                                Try in Conway
+                            </h3>
+                            <p style="font-size: 17px; color: #333;">
+                                Biking, hiking and every tree in <br> between; Put on your hiking <br> boots, and get
+                                ready
+                                for a new <br> adventure.
+                            </p>
+                        </div>
+                    </div>
+                    <button class="explore">EXPLORE ALL</button>
+                </aside>
+            </div>
+        </div>
+        <!-- Travaille charles et severin -->
+
+
+
+        <!-- Travail benedicte -->
+        <div class="message">
+            <h2 class="mess" style="color: white; font-size: 35px;">DO YOU HAVE A LOCAL STORY TO TELL? <br>
+                LET US SHARE IT!
+            </h2>
+
+
+            <button class="button">
+                LEARN MORE
+            </button>
+        </div>
+        <!-- Travail benedicte -->
+
+        <!-- Travail Eric -->
+        <footer>
+            <div class="footer">
+                <img src="./images/atLocal logo.svg" alt="Logo" class="img">
+                <br />
+                <p>Subscribe to our newsletter and <br />
+                    receive our latest news for local places!
+                </p><br />
+
+                <div class="write">
+                    <label for="email"></label>
+                    <div>
+                        <input type="text" id="email" placeholder=" Email ">
+                    </div>
+                    <div>
+                        <button>
+                            Subscribe
+                        </button>
+                    </div>
+                </div>
+
+                <div class="items">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <h5>GET FEATURED</h5>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <h5>ABOUT US</h5>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <h5>CONTACT</h5>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="link">
+                    <ul>
+                        <li>
+                            <a href=""><img src="./images/icons8-facebook-48.png" alt="facebook"></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="./images/icons8-instagram-48.png" alt="instagram"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        <!-- Travail Eric -->
 </body>
+
 </html>
